# TestTaskGPN

./: Dockerfile  README.md  docker-compose.yml  example.db  main.py  pyproject.toml
database/: TestTaskGPN.sql  __init__.py  crudValues.py  models.py
web/: __init__.py  models.py  router.py
