[tool.poetry]
name = "testtaskgpn"
version = "0.3.0"
description = ""
authors = ["Gutes Tod <jefflol003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.test.dependencies]
locust = "^2.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
